Add way to create digital monsters on laravel. Set up a sprite sheet phaser on koltin.

--- a/DigitalPet/app/src/main/res/layout/activity_login.xml
+++ b/DigitalPet/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/imageView"
