--- a/DigitalPet/app/src/main/res/drawable/background.xml
+++ b/DigitalPet/app/src/main/res/drawable/background.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item>
+        <shape android:shape="rectangle">
+            <gradient
+                android:startColor="@color/primary"
+                android:endColor="@color/secondary"
+                android:angle="270" />
+        </shape>
+    </item>
 </selector>
