--- a/DigitalPet/app/src/main/res/values/styles.xml
+++ b/DigitalPet/app/src/main/res/values/styles.xml
@@ -1,3 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="header">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">"@color/text"</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="roundedButton">
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:background">@drawable/rounded_button</item>
+        <item name="android:textColor">@color/text</item>
+    </style>
 </resources>
