--- a/DigitalPet/app/src/main/res/values/themes.xml
+++ b/DigitalPet/app/src/main/res/values/themes.xml
@@ -4,9 +4,9 @@
     <style name="Theme.DigitalPet" parent="android:Theme.Material.Light.NoActionBar" />
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryDark">@color/purple_200</item>
-        <item name="colorAccent">@color/purple_200</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary</item>
+        <item name="colorAccent">@color/accent</item>
     </style>
 
 </resources>
