--- a/DigitalPet/app/src/main/res/layout/activity_main.xml
+++ b/DigitalPet/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,245 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:background="@drawable/background">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="144dp"
-        android:layout_height="144dp"
-        android:scaleType="fitCenter" />
-</LinearLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/caseBackground"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/casesnine"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/frameLayout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="32dp"
+            android:background="@drawable/elementholder"
+            app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/topMenu"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="24dp"
+                app:layout_constraintBottom_toTopOf="@+id/mainView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/topMenu_0"
+                    style="@style/menuButtons"
+                    android:background="@drawable/statsmenuempty"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/topMenu_1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/topMenu_1"
+                    style="@style/menuButtons"
+                    android:background="@drawable/statsmenuempty"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/topMenu_2"
+                    app:layout_constraintStart_toEndOf="@+id/topMenu_0"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/topMenu_2"
+                    style="@style/menuButtons"
+                    android:layout_height="0dp"
+                    android:background="@drawable/statsmenuempty"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/topMenu_3"
+                    app:layout_constraintStart_toEndOf="@+id/topMenu_1"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/topMenu_3"
+                    style="@style/menuButtons"
+                    android:background="@drawable/statsmenuempty"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/topMenu_2"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/mainView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@drawable/winterone"
+                app:layout_constraintBottom_toTopOf="@+id/bottomMenu"
+                app:layout_constraintEnd_toEndOf="@+id/topMenu"
+                app:layout_constraintStart_toStartOf="@+id/topMenu"
+                app:layout_constraintTop_toBottomOf="@+id/topMenu">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/topStatusBar"
+                    android:layout_width="0dp"
+                    android:layout_height="32dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <ImageView
+                    android:id="@+id/mainImageView"
+                    android:layout_width="96dp"
+                    android:layout_height="96dp"
+                    android:background="@drawable/cdchampsix"
+                    android:scaleType="fitCenter"
+                    app:layout_constraintBottom_toTopOf="@+id/bottomStatusBar"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/topStatusBar" />
+
+                <include
+                    android:id="@+id/parentMenuLayout"
+                    layout="@layout/menu_layout"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toTopOf="@+id/bottomStatusBar"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/topStatusBar" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/bottomStatusBar"
+                    android:layout_width="0dp"
+                    android:layout_height="32dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/bottomMenu"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_marginBottom="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/topMenu"
+                app:layout_constraintStart_toStartOf="@+id/topMenu">
+
+                <ImageView
+                    android:id="@+id/bottomMenu_0"
+                    style="@style/menuButtons"
+                    android:background="@drawable/statsmenuempty"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/bottomMenu_1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/bottomMenu_1"
+                    style="@style/menuButtons"
+                    android:background="@drawable/statsmenuempty"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/bottomMenu_2"
+                    app:layout_constraintStart_toEndOf="@+id/bottomMenu_0"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/bottomMenu_2"
+                    style="@style/menuButtons"
+                    android:background="@drawable/statsmenuempty"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/bottomMenu_3"
+                    app:layout_constraintStart_toEndOf="@+id/bottomMenu_1"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/bottomMenu_3"
+                    style="@style/menuButtons"
+                    android:background="@drawable/statsmenuempty"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/bottomMenu_2"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/buttonLayout"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/frameLayout"
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout">
+
+            <Button
+                android:id="@+id/switchButton"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:background="@drawable/gear_button"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/leftButton"
+                style="@style/deviceButton"
+                android:layout_marginEnd="24dp"
+                app:layout_constraintBottom_toTopOf="@+id/bottomButton"
+                app:layout_constraintEnd_toStartOf="@+id/bottomButton"
+                app:layout_constraintTop_toBottomOf="@+id/upButton" />
+
+            <Button
+                android:id="@+id/upButton"
+                style="@style/deviceButton"
+                app:layout_constraintEnd_toEndOf="@+id/bottomButton"
+                app:layout_constraintStart_toStartOf="@+id/bottomButton"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/rightButton"
+                style="@style/deviceButton"
+                android:layout_marginStart="24dp"
+                app:layout_constraintBottom_toTopOf="@+id/bottomButton"
+                app:layout_constraintStart_toEndOf="@+id/bottomButton"
+                app:layout_constraintTop_toBottomOf="@+id/upButton" />
+
+            <Button
+                android:id="@+id/bottomButton"
+                style="@style/deviceButton"
+                android:layout_marginBottom="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
