--- a/DigitalPet/app/src/main/res/values/styles.xml
+++ b/DigitalPet/app/src/main/res/values/styles.xml
@@ -10,4 +10,14 @@
         <item name="android:background">@drawable/rounded_button</item>
         <item name="android:textColor">@color/text</item>
     </style>
+    <style name="deviceButton">
+        <item name="android:layout_width">64dp</item>
+        <item name="android:layout_height">64dp</item>
+        <item name="android:background">@drawable/case_button</item>
+    </style>
+    <style name="menuButtons">
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+    </style>
 </resources>
