--- a/DigitalPet/app/src/main/res/layout/activity_main.xml
+++ b/DigitalPet/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/casesnine"
+        android:background="@drawable/case_test"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="48dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="32dp"
             android:background="@drawable/elementholder"
@@ -108,7 +108,6 @@
                     android:id="@+id/mainImageView"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
-                    android:background="@drawable/cdchampsix"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toTopOf="@+id/bottomStatusBar"
                     app:layout_constraintEnd_toEndOf="parent"
