--- a/DigitalPet/app/src/main/res/layout/menu_layout.xml
+++ b/DigitalPet/app/src/main/res/layout/menu_layout.xml
@@ -10,7 +10,7 @@
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="84dp"
         android:gravity="center"
         android:text="Openned"
         app:layout_constraintBottom_toBottomOf="@+id/count"
@@ -35,7 +35,8 @@
         android:id="@+id/count"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
         android:gravity="center"
         android:text="0 / 0"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,12 +45,12 @@
 
     <ImageView
         android:id="@+id/iconImage"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/statsmenuempty"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_marginBottom="24dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/count"
-        app:layout_constraintStart_toStartOf="@+id/title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
