--- a/DigitalPet/app/src/main/res/drawable/bottom_boarder.xml
+++ b/DigitalPet/app/src/main/res/drawable/bottom_boarder.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/secondary" />
+            <solid android:color="@color/neutral" />
             <corners android:radius="16dp"  />
         </shape>
     </item>
