--- a/DigitalPet/app/src/main/res/values/styles.xml
+++ b/DigitalPet/app/src/main/res/values/styles.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="header">
-        <item name="android:textSize">24sp</item>
-        <item name="android:textColor">"@color/text"</item>
-        <item name="android:textStyle">bold</item>
-    </style>
     <style name="roundedButton">
         <item name="android:layout_margin">8dp</item>
         <item name="android:background">@drawable/rounded_button</item>
-        <item name="android:textColor">@color/text</item>
+        <item name="android:fontFamily">@font/press_start_2p</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:textColorHighlight">@color/accent</item>
+        <item name="android:textColorHint">@color/accent</item>
+        <item name="android:textColorLink">@color/text</item>
+        <item name="android:textSize">12sp</item>
     </style>
     <style name="deviceButton">
         <item name="android:layout_width">56dp</item>
@@ -32,8 +33,8 @@
     <style name="fontHeader">
         <item name="android:fontFamily">@font/press_start_2p</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/text</item>
-        <item name="android:textColorHighlight">@color/light_accent</item>
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:textColorHighlight">@color/accent</item>
         <item name="android:textColorHint">@color/accent</item>
         <item name="android:textColorLink">@color/text</item>
         <item name="android:textSize">16sp</item>
@@ -42,7 +43,7 @@
         <item name="android:fontFamily">@font/press_start_2p</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/text</item>
-        <item name="android:textColorHighlight">@color/light_accent</item>
+        <item name="android:textColorHighlight">@color/accent</item>
         <item name="android:textColorHint">@color/accent</item>
         <item name="android:textColorLink">@color/text</item>
         <item name="android:textSize">14sp</item>
@@ -51,9 +52,27 @@
         <item name="android:fontFamily">@font/press_start_2p</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/text</item>
-        <item name="android:textColorHighlight">@color/light_accent</item>
+        <item name="android:textColorHighlight">@color/accent</item>
         <item name="android:textColorHint">@color/accent</item>
         <item name="android:textColorLink">@color/text</item>
         <item name="android:textSize">12sp</item>
+    </style>
+    <style name="fontParagraphDark">
+        <item name="android:fontFamily">@font/press_start_2p</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:textColorHighlight">@color/accent</item>
+        <item name="android:textColorHint">@color/accent</item>
+        <item name="android:textColorLink">@color/primary</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+    <style name="fontInput">
+        <item name="android:fontFamily">@font/press_start_2p</item>
+        <item name="android:textColor">@color/text</item>
+        <item name="android:textColorHighlight">@color/accent</item>
+        <item name="android:textColorHint">@color/accent</item>
+        <item name="android:textColorLink">@color/text</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:padding">24dp</item>
     </style>
 </resources>
