--- a/DigitalPet/app/src/main/res/layout/menu_layout.xml
+++ b/DigitalPet/app/src/main/res/layout/menu_layout.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/menu_background">
+    android:background="@color/transparent_frame">
 
     <TextView
         android:id="@+id/title"
         style="@style/fontHeader"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="96dp"
         app:layout_constraintBottom_toBottomOf="@+id/count"
         app:layout_constraintEnd_toStartOf="@+id/count"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,14 +34,11 @@
         android:id="@+id/statsViewLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title">
+        app:layout_constraintTop_toBottomOf="@+id/count">
 
         <TextView
             android:id="@+id/statTextTopLeft"
@@ -91,8 +86,6 @@
         style="@style/fontParagraphDark"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/title"
         app:layout_constraintTop_toTopOf="parent" />
