Moving menu functions to menu controller

--- a/DigitalPet/app/src/main/res/layout/activity_dashboard.xml
+++ b/DigitalPet/app/src/main/res/layout/activity_dashboard.xml
@@ -62,9 +62,7 @@
             android:id="@+id/frameLayout"
             android:layout_width="0dp"
             android:layout_height="440dp"
-            android:layout_marginTop="16dp"
             android:background="@drawable/frame"
-            app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -73,9 +71,10 @@
                 android:id="@+id/topMenu"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:background="@color/frame"
                 app:layout_constraintBottom_toTopOf="@+id/mainView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
