updated save and evo function

--- a/DigitalPet/app/src/main/res/layout/activity_dashboard.xml
+++ b/DigitalPet/app/src/main/res/layout/activity_dashboard.xml
@@ -51,8 +51,6 @@
         android:id="@+id/caseBackground"
         android:layout_width="0dp"
         android:layout_height="680dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:background="@drawable/test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,9 +69,6 @@
                 android:id="@+id/topMenu"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:background="@color/frame"
                 app:layout_constraintBottom_toTopOf="@+id/mainView"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +118,7 @@
                 android:id="@+id/mainView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="@drawable/testimage"
+                android:background="@color/frame"
                 app:layout_constraintBottom_toTopOf="@+id/bottomMenu"
                 app:layout_constraintEnd_toEndOf="@+id/topMenu"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -222,7 +217,7 @@
                 android:id="@+id/bottomMenu"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
-                android:layout_marginBottom="24dp"
+                android:background="@color/frame"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/topMenu"
                 app:layout_constraintStart_toStartOf="@+id/topMenu">
