--- a/DigitalPet/app/src/main/res/layout/menu_layout.xml
+++ b/DigitalPet/app/src/main/res/layout/menu_layout.xml
@@ -81,6 +81,7 @@
             style="@style/fontParagraphDark"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/statTextBottomLeft"
             app:layout_constraintEnd_toStartOf="@+id/statTextTopRight"
             app:layout_constraintStart_toStartOf="parent"
@@ -91,6 +92,7 @@
             style="@style/fontParagraphDark"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/statTextBottomRight"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/statTextTopLeft"
@@ -101,6 +103,7 @@
             style="@style/fontParagraphDark"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/statTextBottomRight"
             app:layout_constraintStart_toStartOf="parent"
@@ -111,6 +114,7 @@
             style="@style/fontParagraphDark"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/statTextBottomLeft"
