Started working on battle

--- a/DigitalPet/app/src/main/res/layout/battle_layout.xml
+++ b/DigitalPet/app/src/main/res/layout/battle_layout.xml
@@ -10,6 +10,7 @@
         android:id="@+id/enemyImageView"
         android:layout_width="96dp"
         android:layout_height="96dp"
+        android:rotationY="180"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/userImageView" />
